add lk endpoints
