# backend/internal/business/models/user.go
@@ -18,3 +18,17 @@ type User struct {
 	CreatedAt   time.Time
 	UpdatedAt   time.Time
 }
+
+// UserProfileUpdate представляет DTO для обновления профиля пользователя
+type UserProfileUpdate struct {
+	Username    *string
+	Name        *string
+	Email       *string
+	Description *string
+}
+
+// PasswordChange представляет DTO для смены пароля
+type PasswordChange struct {
+	OldPassword string
+	NewPassword string
+}
